--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,26 @@
+body{
+    background-color: #EAF6F6;
+}
+
+hr{
+    border-style:none;
+    border-top-style: dotted;
+    border-color: grey;
+    border-width: 5px;
+    width: 5%;
+}
+
+
 .profile {
     color: blue;
     width: 150px;
     height: 150px;
     border-radius: 50%;
+}
+
+
+footer{
+    background-color: #EAF6F6;
+    text-decoration: none;
+
 }
